--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <hr />
     <h2>Education</h2>
      <ul>
-         <li> Rota Gymmnasium (2018-2022)</li>
-         <li>Bahçeşehir University (2022-Ongoing)</li>
+         <li> **** Gymmnasium (2018-2022)</li>
+         <li> **** University (2022-Ongoing)</li>
      </ul>
     <hr />
 
